Added current date/time handling.